---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/headers/invalid_namespace_in_header_variables.graphql
---
[
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)`: unknown variable `$foo`, must be one of $config, $context",
        locations: [
            11:49..11:57,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)`: $this is not valid here, must be one of $config, $context",
        locations: [
            12:62..12:71,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)`: `config.bar` must start with an argument name, like `$this` or `$args`",
        locations: [
            13:56..13:66,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.scalar`: unknown variable `$foo`, must be one of $args, $config, $context",
        locations: [
            24:49..24:57,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.scalar`: $status is not valid here, must be one of $args, $config, $context, $request",
        locations: [
            25:62..25:69,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.scalar`: $this is not valid here, must be one of $args, $config, $context, $request",
        locations: [
            26:47..26:52,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.scalar`: `config.bar` must start with an argument name, like `$this` or `$args`",
        locations: [
            27:56..27:66,
        ],
    },
]
